# opencode-go-usage-analyzer

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml
opencode_usage/: __init__.py  app.py  auth.py  auth_manager.py  cli.py  client.py  models.py  parser.py  prompt.py  render.py  session.py
