[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "opencode-go-usage-analyzer"
version = "0.1.0"
description = "Simple CLI to get the usage of Opencode Go subscription"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cli", "opencode", "usage", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[project.scripts]
opencode-usage = "opencode_usage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opencode_usage"]
