[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "opencode-go-usage-analyzer"
version = "0.2.0"
description = "CLI that displays OpenCode Go workspace usage from the web dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Henrique Sardo Fernandes" },
]
keywords = ["cli", "opencode", "usage", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/henriqueSFernandes/opencode-go-usage-analyzer"
Repository = "https://github.com/henriqueSFernandes/opencode-go-usage-analyzer"
Issues = "https://github.com/henriqueSFernandes/opencode-go-usage-analyzer/issues"

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[project.scripts]
opencode-usage = "opencode_usage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opencode_usage"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
